// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Given the Aave Vaults > And a deployed organization vault > When the organization wants to manage the vault > Then the organization should be able to modify the recipients of the vault 1`] = `
[
  {
    "__typename": "VaultFeesRecipientSplit",
    "address": "0x1234567890123456789012345678901234567890",
    "isAaveLabs": false,
    "split": {
      "__typename": "PercentValue",
      "decimals": 4,
      "formatted": "25.00",
      "raw": "2500",
      "value": "0.25",
    },
  },
  {
    "__typename": "VaultFeesRecipientSplit",
    "address": "0x1234567890123456789012345678901234567891",
    "isAaveLabs": false,
    "split": {
      "__typename": "PercentValue",
      "decimals": 4,
      "formatted": "25.00",
      "raw": "2500",
      "value": "0.25",
    },
  },
  {
    "__typename": "VaultFeesRecipientSplit",
    "address": "0xbA3Fa06E181D4a64B07D0ed0e8369811F0aD44BA",
    "isAaveLabs": true,
    "split": {
      "__typename": "PercentValue",
      "decimals": 4,
      "formatted": "50.00",
      "raw": "5000",
      "value": "0.50",
    },
  },
]
`;

exports[`Given the Aave Vaults > And a deployed organization vault > When the user redeems partial amount of their shares > Then the user's vault activity can be fetched for the time window LAST_MONTH 1`] = `
{
  "__typename": "VaultUserActivityResult",
  "breakdown": [
    {
      "__typename": "VaultUserActivityItem",
      "balance": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": Any<String>,
          "value": toBeBigDecimalCloseTo<0.02, 4>,
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
      "date": Any<String>,
      "deposited": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": "50000000000000000",
          "value": "0.05",
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
      "earned": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": Any<String>,
          "value": toBeBigDecimalCloseTo<0.03, 4>,
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
      "withdrew": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": "30000000000000000",
          "value": "0.03",
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
    },
  ],
  "earned": {
    "__typename": "TokenAmount",
    "amount": {
      "__typename": "DecimalValue",
      "decimals": 18,
      "raw": Any<String>,
      "value": toBeBigDecimalCloseTo<0.03, 4>,
    },
    "usd": Any<String>,
    "usdPerToken": Any<String>,
  },
}
`;

exports[`Given the Aave Vaults > And a deployed organization vault > When the user redeems partial amount of their shares > Then the user's vault activity can be fetched for the time window LAST_WEEK 1`] = `
{
  "__typename": "VaultUserActivityResult",
  "breakdown": [
    {
      "__typename": "VaultUserActivityItem",
      "balance": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": Any<String>,
          "value": toBeBigDecimalCloseTo<0.02, 4>,
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
      "date": Any<String>,
      "deposited": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": "50000000000000000",
          "value": "0.05",
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
      "earned": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": Any<String>,
          "value": toBeBigDecimalCloseTo<0.03, 4>,
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
      "withdrew": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": "30000000000000000",
          "value": "0.03",
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
    },
  ],
  "earned": {
    "__typename": "TokenAmount",
    "amount": {
      "__typename": "DecimalValue",
      "decimals": 18,
      "raw": Any<String>,
      "value": toBeBigDecimalCloseTo<0.03, 4>,
    },
    "usd": Any<String>,
    "usdPerToken": Any<String>,
  },
}
`;

exports[`Given the Aave Vaults > And a deployed organization vault > When the user redeems partial amount of their shares > Then the user's vault activity can be fetched for the time window LAST_YEAR 1`] = `
{
  "__typename": "VaultUserActivityResult",
  "breakdown": [
    {
      "__typename": "VaultUserActivityItem",
      "balance": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": Any<String>,
          "value": toBeBigDecimalCloseTo<0.02, 4>,
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
      "date": Any<String>,
      "deposited": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": "50000000000000000",
          "value": "0.05",
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
      "earned": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": Any<String>,
          "value": toBeBigDecimalCloseTo<0.03, 4>,
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
      "withdrew": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": "30000000000000000",
          "value": "0.03",
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
    },
  ],
  "earned": {
    "__typename": "TokenAmount",
    "amount": {
      "__typename": "DecimalValue",
      "decimals": 18,
      "raw": Any<String>,
      "value": toBeBigDecimalCloseTo<0.03, 4>,
    },
    "usd": Any<String>,
    "usdPerToken": Any<String>,
  },
}
`;

exports[`Given the Aave Vaults > And a deployed organization vault > When the user redeems partial amount of their shares > Then the user's vault activity can be fetched for the time window MAX 1`] = `
{
  "__typename": "VaultUserActivityResult",
  "breakdown": [
    {
      "__typename": "VaultUserActivityItem",
      "balance": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": Any<String>,
          "value": toBeBigDecimalCloseTo<0.02, 4>,
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
      "date": Any<String>,
      "deposited": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": "50000000000000000",
          "value": "0.05",
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
      "earned": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": Any<String>,
          "value": toBeBigDecimalCloseTo<0.03, 4>,
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
      "withdrew": {
        "__typename": "TokenAmount",
        "amount": {
          "__typename": "DecimalValue",
          "decimals": 18,
          "raw": "30000000000000000",
          "value": "0.03",
        },
        "usd": Any<String>,
        "usdPerToken": Any<String>,
      },
    },
  ],
  "earned": {
    "__typename": "TokenAmount",
    "amount": {
      "__typename": "DecimalValue",
      "decimals": 18,
      "raw": Any<String>,
      "value": toBeBigDecimalCloseTo<0.03, 4>,
    },
    "usd": Any<String>,
    "usdPerToken": Any<String>,
  },
}
`;

exports[`Given the Aave Vaults > When an organization deploys a new vault > Then it should set recipients to be 50% organization recipients/50% aave 1`] = `
[
  {
    "__typename": "VaultFeesRecipientSplit",
    "address": "0x18aed7dd156D23a46Ad4670b3d4776fb2B198731",
    "isAaveLabs": false,
    "split": {
      "__typename": "PercentValue",
      "decimals": 4,
      "formatted": "25.00",
      "raw": "2500",
      "value": "0.25",
    },
  },
  {
    "__typename": "VaultFeesRecipientSplit",
    "address": "0x1234567890123456789012345678901234567890",
    "isAaveLabs": false,
    "split": {
      "__typename": "PercentValue",
      "decimals": 4,
      "formatted": "25.00",
      "raw": "2500",
      "value": "0.25",
    },
  },
  {
    "__typename": "VaultFeesRecipientSplit",
    "address": "0xbA3Fa06E181D4a64B07D0ed0e8369811F0aD44BA",
    "isAaveLabs": true,
    "split": {
      "__typename": "PercentValue",
      "decimals": 4,
      "formatted": "50.00",
      "raw": "5000",
      "value": "0.50",
    },
  },
]
`;
